Add XdmfDsmvtkWRTest in DSMManager/Testing
git-svn-id: https://svn.cscs.ch/csviz/trunk/Projects/ICARUS@1276 a8ef729d-7618-0410-a8c4-833010e87eec

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -147,6 +147,11 @@ ENDIF(PARAVIEW_BUILD_QT_GUI)
 TARGET_LINK_LIBRARIES(CSCS_DSM_GUIPlugin CSCS_DSM_SMPlugin)
 
 #--------------------------------------------------
+# Testing
+#--------------------------------------------------
+ADD_SUBDIRECTORY(Testing)
+
+#--------------------------------------------------
 # Install
 #--------------------------------------------------
 SET(INSTALL_PATH "${CMAKE_INSTALL_PREFIX}/lib/paraview-${PARAVIEW_VERSION_MAJOR}.${PARAVIEW_VERSION_MINOR}")
