--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -1,7 +1,7 @@
 ADD_DEFINITIONS(-DMPICH_SKIP_MPICXX)
-IF (PARAVIEW_USE_MPI)
-    #  ADD_EXECUTABLE(XdmfDsmvtkWRTest XdmfDsmvtkWRTest.cxx)
-    #TARGET_LINK_LIBRARIES(XdmfDsmvtkWRTest Xdmf ${XDMF_MPI_LIBRARIES} vtkIO
-    #vtkXdmf)
-ENDIF (PARAVIEW_USE_MPI)
+
+IF (VTK_USE_MPI)
+  ADD_EXECUTABLE(XdmfDsmvtkWRTest XdmfDsmvtkWRTest.cxx)
+  TARGET_LINK_LIBRARIES(XdmfDsmvtkWRTest CSCS_DSM_SMPlugin ${XDMF_MPI_LIBRARIES})
+ENDIF (VTK_USE_MPI)
 
