--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,14 +18,14 @@ IF (ParaView_SOURCE_DIR)
     ${VTK_INCLUDE_DIR}
     ${MPI_INCLUDE_PATH}
     ${ParaView_SOURCE_DIR}/VTK/Utilities/vtklibxml2/include
-    ${ParaView_DIR}/VTK/Utilities/vtklibxml2/libxml
+    ${ParaView_BINARY_DIR}/VTK/Utilities/vtklibxml2/libxml
   )
 ELSE (ParaView_SOURCE_DIR)
   FIND_PACKAGE(ParaView REQUIRED)
   INCLUDE(${PARAVIEW_USE_FILE})
   INCLUDE_DIRECTORIES(
     ${ParaView_SOURCE_DIR}/VTK/Utilities/vtklibxml2/include
-    ${ParaView_DIR}/VTK/Utilities/vtklibxml2/libxml
+    ${ParaView_BINARY_DIR}/VTK/Utilities/vtklibxml2/libxml
   )
 ENDIF (ParaView_SOURCE_DIR)
 
