Another try at fixing the paraview binary paths for all types of build
git-svn-id: https://svn.cscs.ch/csviz/trunk/Projects/ICARUS@1298 a8ef729d-7618-0410-a8c4-833010e87eec

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,9 +25,9 @@ ELSE (ParaView_BINARY_DIR)
   INCLUDE(${PARAVIEW_USE_FILE})
   INCLUDE_DIRECTORIES(
     ${ParaView_SOURCE_DIR}/VTK/Utilities/vtklibxml2/include
-    ${ParaView_BINARY_DIR}/VTK/Utilities/vtklibxml2/libxml
+    ${ParaView_DIR}/VTK/Utilities/vtklibxml2/libxml
   )
-ENDIF (ParaView_SOURCE_DIR)
+ENDIF (ParaView_BINARY_DIR)
 
 #--------------------------------------------------
 # Find and Use Boost
