--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -175,3 +175,12 @@ IF(PARAVIEW_BUILD_QT_GUI)
   )
 ENDIF(PARAVIEW_BUILD_QT_GUI)
 
+#--------------------------------------------------
+# DSM Test apps
+#--------------------------------------------------
+
+ADD_EXECUTABLE( TestDSM
+  ${CMAKE_CURRENT_SOURCE_DIR}/../DSMTesting/TestDSM.cxx
+)
+
+TARGET_LINK_LIBRARIES(TestDSM vtkXdmf)
