--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -2,6 +2,6 @@ ADD_DEFINITIONS(-DMPICH_SKIP_MPICXX)
 
 IF (VTK_USE_MPI)
   ADD_EXECUTABLE(XdmfDsmvtkWRTest XdmfDsmvtkWRTest.cxx)
-  TARGET_LINK_LIBRARIES(XdmfDsmvtkWRTest CSCS_DSM_SMPlugin ${XDMF_MPI_LIBRARIES})
+  TARGET_LINK_LIBRARIES(XdmfDsmvtkWRTest CSCS_DSM ${XDMF_MPI_LIBRARIES})
 ENDIF (VTK_USE_MPI)
 
