adding connection option to DSMManager and remote DSM to Gadget2
git-svn-id: https://svn.cscs.ch/csviz/trunk/Projects/ICARUS@1331 a8ef729d-7618-0410-a8c4-833010e87eec

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,7 @@ find_package(Boost 1.38.0 COMPONENTS thread)
 
 if(Boost_FOUND)
   include_directories(${Boost_INCLUDE_DIRS})
-  MESSAGE(${Boost_INCLUDE_DIRS})
+  #MESSAGE(${Boost_INCLUDE_DIRS})
   ADD_DEFINITIONS(-DHAVE_BOOST_THREADS)
   LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
 endif()
