Move TestDSM to DSMManger testing - Add DSM connection test in TestDSM - Add publish/unpublish DSM, fix different connection issues - Add a temporary thread in DSMManager waiting for client accept - Need to find something to exit from MPI_Comm_accept if nobody tries to connect - Other minor improvements etc etc
git-svn-id: https://svn.cscs.ch/csviz/trunk/Projects/ICARUS@1335 a8ef729d-7618-0410-a8c4-833010e87eec

--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -1,7 +1,13 @@
 ADD_DEFINITIONS(-DMPICH_SKIP_MPICXX)
 
-IF (VTK_USE_MPI)
-  ADD_EXECUTABLE(XdmfDsmvtkWRTest XdmfDsmvtkWRTest.cxx)
+#--------------------------------------------------
+# DSM Test apps
+#--------------------------------------------------
+IF(VTK_USE_MPI)
+  ADD_EXECUTABLE(TestDSM ${CMAKE_CURRENT_SOURCE_DIR}/TestDSM.cxx)
+  TARGET_LINK_LIBRARIES(TestDSM vtkXdmf)
+
+  ADD_EXECUTABLE(XdmfDsmvtkWRTest ${CMAKE_CURRENT_SOURCE_DIR}/XdmfDsmvtkWRTest.cxx)
   TARGET_LINK_LIBRARIES(XdmfDsmvtkWRTest CSCS_DSM ${XDMF_MPI_LIBRARIES})
 ENDIF (VTK_USE_MPI)
 
