dsm tests added
git-svn-id: https://svn.cscs.ch/csviz/trunk/Projects/ICARUS@1354 a8ef729d-7618-0410-a8c4-833010e87eec

--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -3,7 +3,17 @@ ADD_DEFINITIONS(-DMPICH_SKIP_MPICXX)
 #--------------------------------------------------
 # DSM Test apps
 #--------------------------------------------------
+
 IF(VTK_USE_MPI)
+#  ADD_EXECUTABLE(TestH5MB ${CMAKE_CURRENT_SOURCE_DIR}/TestH5MB.cxx)
+#  TARGET_LINK_LIBRARIES(TestH5MB vtkXdmf CSCS_DSM)
+
+  ADD_EXECUTABLE(namepub_client ${CMAKE_CURRENT_SOURCE_DIR}/namepub_client.cpp)
+  TARGET_LINK_LIBRARIES(namepub_client vtkXdmf CSCS_DSM)
+
+  ADD_EXECUTABLE(namepub_server ${CMAKE_CURRENT_SOURCE_DIR}/namepub_server.cpp)
+  TARGET_LINK_LIBRARIES(namepub_server vtkXdmf CSCS_DSM)
+
   ADD_EXECUTABLE(TestDSM ${CMAKE_CURRENT_SOURCE_DIR}/TestDSM.cxx)
   TARGET_LINK_LIBRARIES(TestDSM vtkXdmf)
 
