Fix broken build
git-svn-id: https://svn.cscs.ch/csviz/trunk/Projects/ICARUS@1362 a8ef729d-7618-0410-a8c4-833010e87eec

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,8 @@ IF (NOT PARAVIEW_HDF5_LIBRARIES)
   INCLUDE(FindHDF5.cmake)
   SET(PARAVIEW_HDF5_LIBRARIES ${HDF_LIBRARY})
   INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIR})
+ELSE (NOT PARAVIEW_HDF5_LIBRARIES)
+  INCLUDE_DIRECTORIES(../DSMDriver)
 ENDIF (NOT PARAVIEW_HDF5_LIBRARIES)
 
 ADD_DEFINITIONS(-DH5_USE_16_API)
