Fix minor issues
git-svn-id: https://svn.cscs.ch/csviz/trunk/Projects/ICARUS@1387 a8ef729d-7618-0410-a8c4-833010e87eec

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,7 +149,7 @@ ADD_SUBDIRECTORY(Testing)
 # Converter
 #--------------------------------------------------
 
-SET(Converter_LIBS CSCS_DSM CSCS_COMMON)
+SET(Converter_LIBS CSCS_DSM CSCS_Common)
 
 IF(CSCS_PLUGIN_CFX)
   MESSAGE("Xdmf converter supporting CFX " ${CSCS_CFX_DIR})
