improvements to writer to handle static stuff using default vtk writer2
git-svn-id: https://svn.cscs.ch/csviz/trunk/Projects/ICARUS@1407 a8ef729d-7618-0410-a8c4-833010e87eec

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -176,6 +176,14 @@ ADD_EXECUTABLE(
 TARGET_LINK_LIBRARIES(ConvertToXdmf ${Converter_LIBS})
 
 #--------------------------------------------------
+# Testing, pull in the test from ParaView/Utilities/Xdmf2/vtk/Testing/Cxx
+#--------------------------------------------------
+ADD_SUBDIRECTORY(
+  ${ParaView_SOURCE_DIR}/Utilities/Xdmf2/vtk/Testing/Cxx
+  ${CMAKE_CURRENT_BINARY_DIR}/PVTesting
+  )
+
+#--------------------------------------------------
 # Install
 #--------------------------------------------------
 SET(INSTALL_PATH "${CMAKE_INSTALL_PREFIX}/lib/paraview-${PARAVIEW_VERSION_MAJOR}.${PARAVIEW_VERSION_MINOR}")
