Test target XdmfTestVTKIO duplicated in CMakelist
git-svn-id: https://svn.cscs.ch/csviz/trunk/Projects/ICARUS@1409 a8ef729d-7618-0410-a8c4-833010e87eec

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -178,10 +178,10 @@ TARGET_LINK_LIBRARIES(ConvertToXdmf ${Converter_LIBS})
 #--------------------------------------------------
 # Testing, pull in the test from ParaView/Utilities/Xdmf2/vtk/Testing/Cxx
 #--------------------------------------------------
-ADD_SUBDIRECTORY(
-  ${ParaView_SOURCE_DIR}/Utilities/Xdmf2/vtk/Testing/Cxx
-  ${CMAKE_CURRENT_BINARY_DIR}/PVTesting
-  )
+#ADD_SUBDIRECTORY(
+#  ${ParaView_SOURCE_DIR}/Utilities/Xdmf2/vtk/Testing/Cxx
+#  ${CMAKE_CURRENT_BINARY_DIR}/PVTesting
+#  )
 
 #--------------------------------------------------
 # Install
