new H5MB_ code is able to create a file with groups and datasets in parallel Next step - integrate into Xdmf+writer
git-svn-id: https://svn.cscs.ch/csviz/trunk/Projects/ICARUS@1427 a8ef729d-7618-0410-a8c4-833010e87eec

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,8 @@ if(Boost_FOUND)
   LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
 endif()
 
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/..)
+
 #--------------------------------------------------
 # Set project include directories 
 #--------------------------------------------------
@@ -171,6 +173,11 @@ ENDIF(CSCS_PLUGIN_Fluent)
 ADD_EXECUTABLE(
   ConvertToXdmf
   ${CMAKE_CURRENT_SOURCE_DIR}/../Tools/ConvertToXdmf.cxx
+)
+
+ADD_EXECUTABLE(
+  TreeTest
+  ${CMAKE_CURRENT_SOURCE_DIR}/../Tools/TreeTest.cpp
 )
 
 TARGET_LINK_LIBRARIES(ConvertToXdmf ${Converter_LIBS})
