Add XDMF Generator (XdmfGenerator, XdmfHDFDOM, Testing, ...) - Add stringstream output for h5dump light - Minor modifications for sending XML
git-svn-id: https://svn.cscs.ch/csviz/trunk/Projects/ICARUS@1439 a8ef729d-7618-0410-a8c4-833010e87eec

--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -19,5 +19,8 @@ IF(VTK_USE_MPI)
 
   ADD_EXECUTABLE(XdmfDsmvtkWRTest ${CMAKE_CURRENT_SOURCE_DIR}/XdmfDsmvtkWRTest.cxx)
   TARGET_LINK_LIBRARIES(XdmfDsmvtkWRTest CSCS_DSM ${XDMF_MPI_LIBRARIES})
+  
+  ADD_EXECUTABLE(TestGenerator ${CMAKE_CURRENT_SOURCE_DIR}/TestGenerator.cxx)
+  TARGET_LINK_LIBRARIES(TestGenerator vtkXdmf CSCS_DSM)
 ENDIF (VTK_USE_MPI)
 
