--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -20,6 +20,7 @@ IF(VTK_USE_MPI)
   ADD_EXECUTABLE(XdmfDsmvtkWRTest ${CMAKE_CURRENT_SOURCE_DIR}/XdmfDsmvtkWRTest.cxx)
   TARGET_LINK_LIBRARIES(XdmfDsmvtkWRTest CSCS_DSM ${XDMF_MPI_LIBRARIES})
   
+  INCLUDE_DIRECTORIES(../../DSMDump)
   ADD_EXECUTABLE(TestGenerator ${CMAKE_CURRENT_SOURCE_DIR}/TestGenerator.cxx)
   TARGET_LINK_LIBRARIES(TestGenerator vtkXdmf CSCS_DSM)
 ENDIF (VTK_USE_MPI)
