Remove hard coded hdf_hl libraries Fix XDMF_EXPORT for h5dump on windows
git-svn-id: https://svn.cscs.ch/csviz/trunk/Projects/ICARUS@1450 a8ef729d-7618-0410-a8c4-833010e87eec

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,6 @@ ENDIF(COMMAND CMAKE_POLICY)
 #--------------------------------------------------
 # Find and Use ParaView
 #--------------------------------------------------
-INCLUDE_DIRECTORIES( D:/code/hdf5-v18-dsm/hl/src )
-
 IF (ParaView_BINARY_DIR)
   INCLUDE(${QT_USE_FILE}) 
   INCLUDE_DIRECTORIES(
@@ -139,7 +137,7 @@ ADD_PARAVIEW_PLUGIN(
 
 TARGET_LINK_LIBRARIES(
   CSCS_DSM
-    ${PARAVIEW_HDF5_LIBRARIES} D:/cmakebuild/hdf5-1.8.4-dsm/Bin/RelWithDebInfo/hdf5_hl.lib 
+    ${PARAVIEW_HDF5_LIBRARIES} 
     Xdmf
     ${Boost_LIBRARIES}
 )
