--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -22,6 +22,6 @@ IF(VTK_USE_MPI)
   
   INCLUDE_DIRECTORIES(../../DSMDump)
   ADD_EXECUTABLE(TestGenerator ${CMAKE_CURRENT_SOURCE_DIR}/TestGenerator.cxx)
-  TARGET_LINK_LIBRARIES(TestGenerator vtkXdmf CSCS_DSM)
+  TARGET_LINK_LIBRARIES(TestGenerator Xdmf vtkXdmf CSCS_DSM)
 ENDIF (VTK_USE_MPI)
 
