Add DSMDump for HDF 1.8 - Move everything to use 1.8 API
git-svn-id: https://svn.cscs.ch/csviz/trunk/Projects/ICARUS@1454 a8ef729d-7618-0410-a8c4-833010e87eec

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,8 +66,7 @@ ELSE (NOT PARAVIEW_HDF5_LIBRARIES)
   INCLUDE_DIRECTORIES(../DSMDriver)
 ENDIF (NOT PARAVIEW_HDF5_LIBRARIES)
 
-ADD_DEFINITIONS(-DH5_USE_16_API)
-ADD_DEFINITIONS(-DH5FDmpio_DEBUG)
+#ADD_DEFINITIONS(-DH5FDmpio_DEBUG)
 
 #--------------------------------------------------
 # Set Definitions 
