add an include directory
git-svn-id: https://svn.cscs.ch/csviz/trunk/Projects/ICARUS@1457 a8ef729d-7618-0410-a8c4-833010e87eec

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ if(Boost_FOUND)
 endif()
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/..)
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../DSMDriver)
 
 #--------------------------------------------------
 # Set project include directories 
