Move DSMDump/XdmfDsmDump to the ICARUS side - Rename xdmfH5MBCallback to fit convention
git-svn-id: https://svn.cscs.ch/csviz/trunk/Projects/ICARUS@1460 a8ef729d-7618-0410-a8c4-833010e87eec

--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -14,8 +14,11 @@ IF(VTK_USE_MPI)
   ADD_EXECUTABLE(namepub_server ${CMAKE_CURRENT_SOURCE_DIR}/namepub_server.cpp)
   TARGET_LINK_LIBRARIES(namepub_server vtkXdmf CSCS_DSM)
 
-  ADD_EXECUTABLE(TestDSM ${CMAKE_CURRENT_SOURCE_DIR}/TestDSM.cxx)
-  TARGET_LINK_LIBRARIES(TestDSM vtkXdmf)
+  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/..
+                      ${CMAKE_CURRENT_SOURCE_DIR}/../DSMDump-1.8)
+  ADD_EXECUTABLE(TestDSM ${CMAKE_CURRENT_SOURCE_DIR}/TestDSM.cxx
+                 ${CMAKE_CURRENT_SOURCE_DIR}/../XdmfDsmDump.cxx)
+  TARGET_LINK_LIBRARIES(TestDSM CSCS_h5dump vtkXdmf)
 
   ADD_EXECUTABLE(XdmfDsmvtkWRTest ${CMAKE_CURRENT_SOURCE_DIR}/XdmfDsmvtkWRTest.cxx)
   TARGET_LINK_LIBRARIES(XdmfDsmvtkWRTest CSCS_DSM ${XDMF_MPI_LIBRARIES})
