--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ endif()
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/..)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../DSMDriver)
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/DSMDump-1.8)
 
 #--------------------------------------------------
 # Set project include directories 
@@ -109,9 +110,9 @@ ADD_PARAVIEW_PLUGIN(
     ${CMAKE_CURRENT_SOURCE_DIR}/XdmfGenerator.cxx
     ${CMAKE_CURRENT_SOURCE_DIR}/XdmfHDFDOM.cxx
     ${CMAKE_CURRENT_SOURCE_DIR}/H5MButil.cxx
-    ${CMAKE_CURRENT_SOURCE_DIR}/xdmfH5MBCallback.cxx
-  
-  GUI_INTERFACES 
+    ${CMAKE_CURRENT_SOURCE_DIR}/XdmfH5MBCallback.cxx
+    ${CMAKE_CURRENT_SOURCE_DIR}/XdmfDsmDump.cxx 
+ GUI_INTERFACES 
     ${DSM_IFACE}
   GUI_SOURCES
     pqDSMViewerPanel.cxx
@@ -128,10 +129,15 @@ TARGET_LINK_LIBRARIES(
   CSCS_DSM
     ${PARAVIEW_HDF5_LIBRARIES} 
     Xdmf
+    CSCS_h5dump
     ${Boost_LIBRARIES}
 )
 
 ENDIF(PARAVIEW_BUILD_QT_GUI)
+#-------------------------------------------------
+# H5dump lib
+#------------------------------------------------
+ADD_SUBDIRECTORY(DSMDump-1.8)
 
 #--------------------------------------------------
 # Testing
