--- a/DSMDump-1.8/CMakeLists.txt
+++ b/DSMDump-1.8/CMakeLists.txt
@@ -4,9 +4,10 @@
 IF(PARAVIEW_USE_MPI)
   ADD_DEFINITIONS("-DMPICH_IGNORE_CXX_SEEK")
   ADD_DEFINITIONS("-DMPICH_SKIP_MPICXX")
-#  ADD_DEFINITIONS("-DH5DUMP_EXEC")
-#  ADD_EXECUTABLE( 
-SET(h5dump_SOURCES
+  #  ADD_DEFINITIONS("-DH5DUMP_EXEC")
+
+  SET(
+    h5dump_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/h5dump
     ${CMAKE_CURRENT_SOURCE_DIR}/h5tools
     ${CMAKE_CURRENT_SOURCE_DIR}/h5tools_str
@@ -15,8 +16,8 @@ SET(h5dump_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/h5tools_type
     ${CMAKE_CURRENT_SOURCE_DIR}/h5trav
   )
-ADD_LIBRARY(CSCS_h5dump SHARED ${h5dump_SOURCES})
 
+  ADD_LIBRARY(CSCS_h5dump SHARED ${h5dump_SOURCES})
   TARGET_LINK_LIBRARIES(
     CSCS_h5dump
     ${MPI_LIBRARY}
