--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -168,6 +168,7 @@ ENDIF(CSCS_PLUGIN_Fluent)
 
 ADD_EXECUTABLE(
   ConvertToXdmf
+  ${CMAKE_CURRENT_SOURCE_DIR}/../Tools/vtkSubdivideUnstructuredGrid.cxx
   ${CMAKE_CURRENT_SOURCE_DIR}/../Tools/ConvertToXdmf.cxx
 )
 
