More improvements to the multi-block data splitting and writing to xdmf
git-svn-id: https://svn.cscs.ch/csviz/trunk/Projects/ICARUS@1491 a8ef729d-7618-0410-a8c4-833010e87eec

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -169,6 +169,7 @@ ENDIF(CSCS_PLUGIN_Fluent)
 ADD_EXECUTABLE(
   ConvertToXdmf
   ${CMAKE_CURRENT_SOURCE_DIR}/../Tools/vtkSubdivideUnstructuredGrid.cxx
+  ${CMAKE_CURRENT_SOURCE_DIR}/../Tools/vtkSubdivideBlocksFilter.cxx
   ${CMAKE_CURRENT_SOURCE_DIR}/../Tools/ConvertToXdmf.cxx
 )
 
