Add socket tests - Fix some warnings from gcc linux compiler
git-svn-id: https://svn.cscs.ch/csviz/trunk/Projects/ICARUS@1510 a8ef729d-7618-0410-a8c4-833010e87eec

--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -12,6 +12,12 @@ IF(VTK_USE_MPI)
 
   ADD_EXECUTABLE(namepub_server ${CMAKE_CURRENT_SOURCE_DIR}/namepub_server.cpp)
   TARGET_LINK_LIBRARIES(namepub_server CSCS_DSM)
+
+  ADD_EXECUTABLE(socket_client ${CMAKE_CURRENT_SOURCE_DIR}/socket_client.cxx)
+  TARGET_LINK_LIBRARIES(socket_client CSCS_DSM)
+
+  ADD_EXECUTABLE(socket_server ${CMAKE_CURRENT_SOURCE_DIR}/socket_server.cxx)
+  TARGET_LINK_LIBRARIES(socket_server CSCS_DSM)
   
   ADD_EXECUTABLE(socket_mpi_client ${CMAKE_CURRENT_SOURCE_DIR}/socket_mpi_client.cxx)
   TARGET_LINK_LIBRARIES(socket_mpi_client CSCS_DSM)
