move DSMDump and XdmfDsmDump to pv-meshless because of H5FDdsm dependencies
git-svn-id: https://svn.cscs.ch/csviz/trunk/Projects/ICARUS@1522 a8ef729d-7618-0410-a8c4-833010e87eec

--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -31,7 +31,7 @@ IF(VTK_USE_MPI)
   ADD_EXECUTABLE(XdmfDsmvtkWRTest ${CMAKE_CURRENT_SOURCE_DIR}/XdmfDsmvtkWRTest.cxx)
   TARGET_LINK_LIBRARIES(XdmfDsmvtkWRTest CSCS_DSM)
   
-  ADD_EXECUTABLE(TestGenerator ${CMAKE_CURRENT_SOURCE_DIR}/TestGenerator.cxx)
-  TARGET_LINK_LIBRARIES(TestGenerator CSCS_DSM)
+#  ADD_EXECUTABLE(TestGenerator ${CMAKE_CURRENT_SOURCE_DIR}/TestGenerator.cxx)
+#  TARGET_LINK_LIBRARIES(TestGenerator CSCS_DSM)
 ENDIF (VTK_USE_MPI)
 
