Fix libXML include path for DSM Xdmf read/write CFX testing had wrong plugin name - updated
git-svn-id: https://svn.cscs.ch/csviz/trunk/Projects/ICARUS@1575 a8ef729d-7618-0410-a8c4-833010e87eec

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ IF (ParaView_BINARY_DIR)
     ${MPI_INCLUDE_PATH}
     ${ParaView_SOURCE_DIR}/VTK/Utilities/vtklibxml2/include
     ${ParaView_BINARY_DIR}/VTK/Utilities/vtklibxml2/libxml
+    ${ParaView_BINARY_DIR}/VTK/Utilities/vtklibxml2
   )
 ELSE (ParaView_BINARY_DIR)
   FIND_PACKAGE(ParaView REQUIRED)
@@ -26,6 +27,7 @@ ELSE (ParaView_BINARY_DIR)
   INCLUDE_DIRECTORIES(
     ${ParaView_SOURCE_DIR}/VTK/Utilities/vtklibxml2/include
     ${ParaView_DIR}/VTK/Utilities/vtklibxml2/libxml
+    ${ParaView_DIR}/VTK/Utilities/vtklibxml2
   )
 ENDIF (ParaView_BINARY_DIR)
 
