--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -28,8 +28,8 @@ IF(VTK_USE_MPI)
   ADD_EXECUTABLE(TestDSM ${CMAKE_CURRENT_SOURCE_DIR}/TestDSM.cxx)
   TARGET_LINK_LIBRARIES(TestDSM CSCS_DSM)
 
-#  ADD_EXECUTABLE(XdmfDsmvtkWRTest ${CMAKE_CURRENT_SOURCE_DIR}/XdmfDsmvtkWRTest.cxx)
-#  TARGET_LINK_LIBRARIES(XdmfDsmvtkWRTest CSCS_DSM)
+#  ADD_EXECUTABLE(H5FDdsmvtkWRTest ${CMAKE_CURRENT_SOURCE_DIR}/H5FDdsmvtkWRTest.cxx)
+#  TARGET_LINK_LIBRARIES(H5FDdsmvtkWRTest CSCS_DSM)
   
   ADD_EXECUTABLE(TestGenerator ${CMAKE_CURRENT_SOURCE_DIR}/TestGenerator.cxx)
   TARGET_LINK_LIBRARIES(TestGenerator CSCS_DSM)
