add max socket test

--- a/Testing/Makefile
+++ b/Testing/Makefile
@@ -1,7 +1,7 @@
-CXX = g++
+CXX = g++ -g
 LIBS = 
 
-all: socket_client socket_server
+all: socket_client socket_server big_socket_server
 
 socket_client:	socket_client.cxx TestSocket.cxx TestSocket.h
 	${CXX} -Wall -DTESTSOCKET socket_client.cxx TestSocket.cxx -o $@ ${LIBS}
@@ -9,9 +9,12 @@ socket_client:	socket_client.cxx TestSocket.cxx TestSocket.h
 socket_server:      socket_server.cxx TestSocket.cxx TestSocket.h
 	${CXX} -Wall -DTESTSOCKET socket_server.cxx TestSocket.cxx -o $@ ${LIBS}
 
+big_socket_server:	big_socket_server.cxx TestSocket.cxx TestSocket.h
+	${CXX} -Wall big_socket_server.cxx TestSocket.cxx -o $@ ${LIBS}
+
 clean:
 	rm *.o socket_client.p.* socket_server.p.*
 
 distclean:
-	rm *.o socket_client.p.* socket_server.p.* socket_client socket_server
+	rm *.o socket_client.p.* socket_server.p.* socket_client socket_server big_socket_server
 
